--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.url=jdbc:h2:https://www.ilmateenistus.ee/ilma_andmed/xml/observations.php
+spring.datasource.username=root
+spring.datasource.password=Mysql@123
 
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H25InnoDBDialect
+
+spring.jpa.hibernate.ddl-auto = update
