--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.datasource.url=jdbc:h2:https://www.ilmateenistus.ee/ilma_andmed/xml/observations.php
-spring.datasource.username=root
-spring.datasource.password=Mysql@123
+spring.h2.console.enabled=true
+spring.datasource.generate-unique-name=false
+spring.datasource.name=ilmaandmed
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H25InnoDBDialect
 
-spring.jpa.hibernate.ddl-auto = update
+
